--- a/firebase.json
+++ b/firebase.json
@@ -19,15 +19,18 @@
       "predeploy": []
     }
   ],
-  "apphosting": {
-    "backendId": "my-web-app",
-    "rootDir": "/",
+  "hosting": {
+    "public": "public",
     "ignore": [
-      "node_modules",
-      ".git",
-      "firebase-debug.log",
-      "firebase-debug.*.log",
-      "functions"
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
